# Api_Lista_Compras

./: README.md  pyproject.toml
api_lista/: api.py  schemas.py  services.py  views.py
api_lista/database/: connection.py  init_db.py  models.py
pgdata/: postmaster.pid
pgdata/base/16384/: 1247  1249  1249_fsm  1259  1259_fsm  16454  16460  16461  16463  16469  2224  2579  2604  2606  2608  2610  2619  2619_fsm  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2696  2699  2701  2702  2703  2704  2840  (+29 more)
pgdata/global/: 1260  1262  2671  pg_control
pgdata/pg_stat_tmp/: global.stat
tests/: test_api_acherry.py
